[package]
name = "pecunovus"
version = "0.1.0"
edition = "2021"
authors = ["MegaHoot <dev@megahoot.com>"]
description = "Pecu Novus is a Layer-1 blockchain network designed for financial applications, focusing on hybrid architecture, scalability, and user-friendliness to bridge traditional finance and blockchain technology"
license = "Apache-2.0"

[dependencies]
# Async runtime + utilities
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization / deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Networking
tokio-util = "0.7"
bytes = "1.7"

# Database
rocksdb = { version = "0.21", optional = true }

# RPC (JSON-RPC over HTTP)
jsonrpsee = { version = "0.24", features = ["server", "macros", "client"] }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
parking_lot = "0.12"
rand = "0.8"
hex = "0.4"

# Crypto primitives (ed25519, sha2, etc.)
ed25519-dalek = { version = "1.0", features = ["std"] }
sha2 = "0.10"
blake3 = "1.5"

# Metrics
lazy_static = "1.4"

[dev-dependencies]
tokio-test = "0.4"

[features]
# Default uses in-memory DB for devnet/local testing
default = ["inmem-db"]

# Feature for production-grade RocksDB account store
rocksdb-db = ["rocksdb"]

# Feature for local dev (unit testing, mocks)
inmem-db = []
