[package]
name = "pecu-novus"
version = "2.0.0"
edition = "2021"
description = "Pecu Novus Blockchain - Rust Implementation"
license = "Apache-2.0"

[[bin]]
name = "pecu-node"
path = "src/main.rs"

[lib]
name = "pecu_novus"
path = "src/lib.rs"

[dependencies]
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
rand = "0.8"
hmac = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
sled = "0.34"
parking_lot = "0.12"
dashmap = "5"
bs58 = "0.5"
